@@ -2,9 +2,11 @@ DIST Net-Daemon-0.43.tar.gz 28553 RMD160 a20e80ebf67e57fd0bf47714ab1ccc820573d39
 DIST Net-Daemon-0.45.tar.gz 29232 RMD160 f53f2f1e26dc1697567e65c4271e76d4e488931c SHA1 588bc60100fc776663f6e9185a3cc0c78258061a SHA256 acf0368dac5b97a74fd008c8fb8107379eca1d2287ee7d3129ee722f73a892c9
 DIST Net-Daemon-0.46.tar.gz 29318 RMD160 86e551a0ee39031ed37c78b4e0775a68488d9c86 SHA1 192c671bef7f654dd7299898d46e4c1e803c1299 SHA256 6571bb8b6ed390eda8f62373c4cd64f8a85d616616696b0021c1cc7be32d4a89
 DIST Net-Daemon-0.47.tar.gz 29400 RMD160 ec00154e8a8baf4ca4b70d1af6e668794856b803 SHA1 8d9c6ddce44cdc10a71befb224b72fcdfa5d7bbe SHA256 a5a51aaf7d8b128915f5b1f3d64ab0c74039e7b97d30f3262c7f2c229429acf5
+DIST Net-Daemon-0.48.tar.gz 29513 RMD160 0a0dab641a7a9ca0964ce33f9d3af7de375cd1e0 SHA1 b322436fd9e5cc52fa1da9db345838026351bcea SHA256 3c12f1e44f9bbce427204a83dd73aa6dd2909e91190d32d6ec3563beca7bbc74
 EBUILD Net-Daemon-0.43.ebuild 597 RMD160 462a13276b36d68cc61c1a3139c71abd73521b6e SHA1 266d2b67ae62499d609965440211129cc39e0e38 SHA256 3f92a9944b0aed18871be97b8f02e50e6f1aea6c06df47f43b810c1629e8d95b
 EBUILD Net-Daemon-0.450.ebuild 588 RMD160 277ddfa502bbb198cbf32e94a39ded419fef125d SHA1 15b11ffc99e0c8167e963f8efdb3aa421830e4dc SHA256 741f7d3f693f08583e89338aad2b278e50f42d0cbc1a06dc174c870df2b02f4c
 EBUILD Net-Daemon-0.460.ebuild 588 RMD160 137fc1e8ec34b8764fbe38e70bfe90b885e20b1b SHA1 c19a88d1a7126910282a57439b186d86ee789dee SHA256 2733f48eaf15ee1072eafac6a2b89c7848efde2dd2602cd7ca9824cea5b8ab21
 EBUILD Net-Daemon-0.470.0.ebuild 590 RMD160 87d1d854ed1e6f608727f1e2b33a98d346580538 SHA1 1ed9f51cd499feaed4cbee8a7dda9f14bc0bd6d4 SHA256 35e089b6af3ac6939b1a3fc21392e61fd352890accb51b7d344b377f7763a9a5
-MISC ChangeLog 6258 RMD160 01e319ff48d4e9480bda2301e691c475af005a9d SHA1 3e7ee6ffaa17e010c370c220a907af7d6af317c2 SHA256 611da1b213289b7564d30eb16c0d0b1b28688c115c3b630bb3ac630f025b5814
+EBUILD Net-Daemon-0.480.0.ebuild 590 RMD160 cdad928d3646f328e42225126275d2753ea5a817 SHA1 50e9879ccf7fa26f513b20a9450f500a6f811762 SHA256 f200befc58b95e209a8765a9f6f4724d7f536968f5eebe061edf277e90b9c685
+MISC ChangeLog 6385 RMD160 27915384716ae8221e0fb823ed6b6915d90c6a84 SHA1 ed29fae4a7cf46cccbe6103a9e844d0778c1bb3b SHA256 d37ca50031a8ca59f4c8e8c31b5372af47dbf1f1f1be9c1415a79e14fe98bc11
 MISC metadata.xml 236 RMD160 3ff1fa4a3b3778192f30cf858507e73a7b9207ff SHA1 e2a87afba54e6d474bd1a038388ab82e0cc33a8d SHA256 dcea34022681492d1de2622580d5be1ae5f2890b5039dcb6f7448cfa37cd0b1f
