@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Net-Daemon
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Net-Daemon/ChangeLog,v 1.62 2011/03/04 07:40:48 tove Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Net-Daemon/ChangeLog,v 1.63 2011/03/10 07:03:49 tove Exp $
+
+*Net-Daemon-0.480.0 (10 Mar 2011)
+
+  10 Mar 2011; Torsten Veller <tove@gentoo.org> +Net-Daemon-0.480.0.ebuild:
+  Version bump
 
 *Net-Daemon-0.470.0 (04 Mar 2011)
 
